# trading-bot

./: .gitignore  AGENTS.md  pyproject.toml  test.py
.claude/: settings.local.json
docs/superpowers/plans/: 2026-07-15-vnstock-data-live-pytest.md  2026-07-16-vnstock-tidb-etl.md
docs/superpowers/specs/: 2026-07-15-vnstock-data-pytest-design.md  2026-07-16-vnstock-tidb-etl-design.md
etl/: __init__.py  config.py  logging.py
tests/: test_config_logging.py
